# amplitools

./: Cargo.toml
amp_cli/: Cargo.toml
amp_cli/src/: main.rs
amp_cli/src/apps/: bnk2wav.rs  extract.rs  mod.rs
amp_gui/: Cargo.toml
amp_gui/src/: app.rs  main.rs
amp_lib/: Cargo.toml
amp_lib/src/: bank.rs  io.rs  lib.rs
