[package]
name = "amp_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
amp_lib = { path = "../amp_lib" }
eframe = "0.22.0"
egui_extras = { version = "0.22.0", features = [ "svg" ] }
grim = { path = "../../grim/core/grim" }
kira = "0.8.3"
tokio = { version = "1.28.2", features = ["full"] }
